--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="source/style.css">
@@ -14,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header__wrapper">
+            <div data-aos="fade-left" class="header__wrapper">
                 <ul class="header__list">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About me</a></li>
@@ -22,7 +24,9 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
+                <i class="fas fa-bars fa-2x" id="burger"></i>
             </div>
+
         </div>
     </header>
 
@@ -148,5 +152,8 @@
         </section>
     </main>
 </body>
+<script>
+    AOS.init();
+</script>
 
 </html>
