--- a/index.html
+++ b/index.html
@@ -13,6 +13,49 @@
     <link rel="stylesheet" href="source/style.css">
 </head>
 
+
+<style type="text/css">
+    #hellopreloader>p {
+        display: none;
+    }
+
+    #hellopreloader_preload {
+        display: block;
+        position: fixed;
+        z-index: 99999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        min-width: 1000px;
+        background: rgba(24, 3, 3, 0.811) url(http://hello-site.ru//main/images/preloads/bars.svg) center center no-repeat;
+        background-size: 86px;
+    }
+</style>
+<div id="hellopreloader">
+    <div id="hellopreloader_preload"></div>
+    <p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p>
+</div>
+<script type="text/javascript">
+    var hellopreloader = document.getElementById("hellopreloader_preload");
+
+    function fadeOutnojquery(el) {
+        el.style.opacity = 1;
+        var interhellopreloader = setInterval(function () {
+            el.style.opacity = el.style.opacity - 0.05;
+            if (el.style.opacity <= 0.05) {
+                clearInterval(interhellopreloader);
+                hellopreloader.style.display = "none";
+            }
+        }, 16);
+    }
+    window.onload = function () {
+        setTimeout(function () {
+            fadeOutnojquery(hellopreloader);
+        }, 2000);
+    };
+</script>
+
 <body>
     <header class="header">
         <div class="container">
